Strip invalid characters from desired bot user names in the REGISTER command